Fix headers / spacing
We want the headers to increment by one

--- a/assets/css/constants.css
+++ b/assets/css/constants.css
@@ -16,6 +16,5 @@
 
     --container-padding: 2rem;
 
-    --header-bottom-spacing: 2em;
     --header-2-bottom-spacing: 1.6em;
 }
