--- a/assets/css/section-our-focus-media.css
+++ b/assets/css/section-our-focus-media.css
@@ -26,7 +26,7 @@ section.our-focus .flex-wrapper .flex-item {
     grid-template-areas: 
       "focus-icon header"
       "focus-icon description";
-    margin-top: var(--header-bottom-spacing);
+    margin-top: 1em;
 }
 
 section.our-focus .flex-wrapper .flex-item h4 {
@@ -45,7 +45,7 @@ section.our-focus .flex-wrapper .flex-item i {
 section.our-focus .flex-wrapper .flex-item p {
     font-size: 0.9em;
     grid-area: description;
-    margin-top: 0;
+    margin-top: 0.5em;
 }
 
 @media (max-width: 991.98px) {
